[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/main_screens/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/main_screens/reusable_controls/ButtonNinePatch.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/buttons/credits/Credits-Normal.png" type="Texture" id=3]
[ext_resource path="res://scenes/buttons/credits/Credits-Pressed.png" type="Texture" id=4]
[ext_resource path="res://scenes/buttons/credits/Credits-Hover.png" type="Texture" id=5]

[node name="MainMenu" type="Node2D"]
position = Vector2( 180, 120 )
script = ExtResource( 1 )

[node name="Notes" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -152.708
margin_top = -15.5054
margin_right = -88.7076
margin_bottom = 8.4946
rect_min_size = Vector2( 64, 24 )
size_flags_vertical = 4
size_flags_stretch_ratio = 10.42

[node name="Play" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -25.8278
margin_top = -81.7077
margin_right = 22.1722
margin_bottom = -45.7077
focus_neighbour_left = NodePath("../../../MarginContarnerNotes/VBoxContainer/Notes")
focus_neighbour_right = NodePath("../../../Options")
focus_neighbour_bottom = NodePath("../../CenterContainerCredits/Credits")
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Credits" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -25.8278
margin_top = 50.2923
margin_right = 22.1722
margin_bottom = 86.2923
focus_neighbour_left = NodePath("../../../MarginContarnerNotes/VBoxContainer/Notes")
focus_neighbour_top = NodePath("../../CenterContainerPlay/Play")
focus_neighbour_right = NodePath("../../../Options")
size_flags_horizontal = 4
size_flags_vertical = 6
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="Options" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 96.1887
margin_top = -24.7541
margin_right = 144.189
margin_bottom = 11.2459
focus_neighbour_top = NodePath("../VerticalContainer/CenterContainerPlay/Play")
focus_neighbour_bottom = NodePath("../VerticalContainer/CenterContainerCredits/Credits")
size_flags_vertical = 6
size_flags_stretch_ratio = 2.0
[connection signal="pressed" from="Notes" to="." method="_on_Notes_pressed"]
[connection signal="toggled" from="Notes" to="." method="_on_Notes_toggled"]
[connection signal="mouse_got_focus" from="Play" to="." method="_on_mouse_got_focus"]
[connection signal="mouse_lost_focus" from="Play" to="." method="_on_mouse_lost_focus"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="mouse_got_focus" from="Credits" to="." method="_on_mouse_got_focus"]
[connection signal="mouse_lost_focus" from="Credits" to="." method="_on_mouse_lost_focus"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="mouse_got_focus" from="Options" to="." method="_on_mouse_got_focus"]
[connection signal="mouse_lost_focus" from="Options" to="." method="_on_mouse_lost_focus"]
[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]
